Fixes problem with project section
Project section was misaligned.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,7 @@ a img {
 main {
     background-color:beige;
     width:95%;
-    margin:0 auto;
-    overflow: auto;
+    margin:0 auto; 
 }
 
 header {
@@ -128,23 +127,24 @@ nav {
 /************** start #projects *******************/
 
 #projects {
-    background-color:coral; 
-    overflow:hidden;
+    background-color:darksalmon;
+    padding-top:5%;
 }
 #project-box {
+    overflow: hidden;
     margin:0 auto;
     background-color: red;
-    overflow:hidden;
     max-width: 800px;
     width:90%;
 }
 .project-left {
     float:left;
-    width:43%;
+    width:40%;
     padding:3%;
 }
 .project-right {
-    width:45%;
+    float:right;
+    width:40%;
     padding:3%;
 }
 #project-box img {
@@ -152,9 +152,9 @@ nav {
 }
 /************** end #projects *******************/
 
+/************** start #contact *******************/
 #contact {
     background-color:darkseagreen; 
-    overflow: auto;
 }
 #social {
     float:left;
@@ -168,6 +168,15 @@ nav {
     float:right;
 }
 #form {
+}
+/************** end #contact *******************/
+
+/************** start footer *******************/
+footer {
+    width:100%;
+    height:75px;
+    background-color: aliceblue;
+    clear:both;
 }
 
 
